{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "BuildMode",
            "id": "57f75204-deb0-4fd7-81d1-f1a842797437",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "1b059c23-3aaf-4842-9b8a-f1f13fc6ee0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Deselect",
                    "type": "Button",
                    "id": "eeb99c46-200e-4b09-851d-abdc168751be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b4a9d039-1272-4500-975f-ffd68f7bfec9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a84a581-552e-4352-852b-d89da7a390f3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Deselect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayMode",
            "id": "d4ecbb5f-9220-4530-9453-b4383ffd3de7",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "9cea5916-1629-4b91-8b03-be5f356c7d87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1efb9cab-d2af-4da4-89ef-e7d840a81129",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Game",
            "id": "9980926a-506e-4ffc-8196-c4a7462ca133",
            "actions": [
                {
                    "name": "MovementVector",
                    "type": "PassThrough",
                    "id": "5cc23e5a-4fbe-46ce-bb0c-a376639a17f0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "80e6c7a6-8750-4367-b3f8-1481a080ef62",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9abf5af4-7090-46ae-a998-9466fda33edd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1d63352e-3081-49a8-8509-42eeb90ea099",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9834d5be-66cc-42fe-8c46-b328987162a1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6f7bc9f2-99ed-45e9-bb8f-707b5ad90af2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}